[gd_scene load_steps=24 format=3 uid="uid://c2fhjplpn3a0t"]

[ext_resource type="Script" uid="uid://b7okwbt75b5cr" path="res://objects/interactables/shop/ui/shop_ui.gd" id="1_v1d2m"]
[ext_resource type="PackedScene" uid="uid://dkd6dg5s5uuef" path="res://objects/general_ui/base_panel.tscn" id="2_qchdu"]
[ext_resource type="FontFile" uid="uid://815gwlftl5ik" path="res://fonts/impress-bt.ttf" id="2_sv8s5"]
[ext_resource type="PackedScene" uid="uid://b0d1er4oqiqcn" path="res://objects/general_ui/general_button/general_button.tscn" id="3_8ehwg"]
[ext_resource type="Texture2D" uid="uid://degibjq5gudrf" path="res://ui_assets/misc/Jar.png" id="4_4y3p5"]
[ext_resource type="Texture2D" uid="uid://dpt21awypabxf" path="res://ui_assets/general/tt_t_gui_mat_shuffleArrowUp.png" id="5_erq7r"]
[ext_resource type="Texture2D" uid="uid://bkbmvj823roof" path="res://ui_assets/general/tt_t_gui_mat_shuffleArrowDown.png" id="6_ott2t"]
[ext_resource type="Shader" uid="uid://ryrnfqn0ixe5" path="res://scenes/title_screen/hue_shift.gdshader" id="7_5p3hr"]
[ext_resource type="Texture2D" uid="uid://xhprgs7k8i2r" path="res://ui_assets/general/tt_t_gui_mat_shuffleArrowDisabled.png" id="7_ytlpl"]
[ext_resource type="FontFile" uid="uid://cup2yr5w7or1l" path="res://fonts/Minnie.TTF" id="8_pscmb"]
[ext_resource type="Texture2D" uid="uid://xf7s2qvt73i" path="res://ui_assets/misc/quality_star.png" id="9_wn4ob"]
[ext_resource type="Texture2D" uid="uid://ddcktpjy3gdew" path="res://ui_assets/misc/uiAccessoryDelete_up.png" id="11_gwwfa"]
[ext_resource type="Texture2D" uid="uid://b7ri5sq021cvo" path="res://ui_assets/misc/uiAccessoryDelete_down.png" id="12_56pnv"]
[ext_resource type="Texture2D" uid="uid://dn8vndd37lqom" path="res://ui_assets/misc/uiAccessoryDelete_rollover.png" id="13_sp0y4"]

[sub_resource type="LabelSettings" id="LabelSettings_ss5fb"]
line_spacing = 0.0
font = ExtResource("8_pscmb")
font_size = 22
font_color = Color(0.890196, 0.392157, 0.113725, 1)
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_dtda2"]
font = ExtResource("2_sv8s5")
font_size = 20
font_color = Color(0.658911, 1.22733e-06, 9.62615e-08, 1)
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_oak1j"]
font = ExtResource("2_sv8s5")
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bhfep"]
shader = ExtResource("7_5p3hr")
shader_parameter/Shift_Hue = 0.585
shader_parameter/alpha = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_1logi"]
font = ExtResource("2_sv8s5")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_jrbe7"]
font = ExtResource("8_pscmb")
font_size = 22
font_color = Color(0.19651, 0.579885, 0.918822, 1)
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xtbda"]
font = ExtResource("2_sv8s5")
font_size = 20
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_l57lv"]
line_spacing = -5.0
font = ExtResource("2_sv8s5")
font_color = Color(0.0846899, 0.0846899, 0.0846899, 1)
shadow_color = Color(0, 0, 0, 0.0941176)

[sub_resource type="LabelSettings" id="LabelSettings_8fg33"]
font = ExtResource("2_sv8s5")
font_size = 28

[node name="ShopUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v1d2m")

[node name="Panel" type="Control" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -367.0
offset_top = -80.0
offset_right = -65.0
offset_bottom = 40.0
grow_horizontal = 0
grow_vertical = 2

[node name="Background" parent="Panel" instance=ExtResource("2_qchdu")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -5.0
offset_right = 372.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.45, 0.45)

[node name="ItemLabel" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 13.0
offset_top = 10.0
offset_right = 289.0
offset_bottom = 59.0
grow_horizontal = 2
size_flags_vertical = 0
text = "Placeholder Item"
label_settings = SubResource("LabelSettings_ss5fb")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="SaleLabel" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 75.0
offset_top = -12.0
offset_right = 134.0
offset_bottom = 19.0
grow_vertical = 2
rotation = 0.261799
pivot_offset = Vector2(29.5, 15.5)
text = "SALE!"
label_settings = SubResource("LabelSettings_dtda2")

[node name="PriceContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 23.0
offset_top = 3.0
offset_right = 119.0
offset_bottom = 45.0
grow_vertical = 2

[node name="BeanJar" type="TextureRect" parent="Panel/PriceContainer"]
custom_minimum_size = Vector2(38, 42)
layout_mode = 2
texture = ExtResource("4_4y3p5")
expand_mode = 1

[node name="PriceLabel" type="Label" parent="Panel/PriceContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "99"
label_settings = SubResource("LabelSettings_oak1j")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BuyButton" parent="Panel" instance=ExtResource("3_8ehwg")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_bhfep")
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -148.0
offset_top = -58.0
offset_right = -22.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("11_gwwfa")
texture_pressed = ExtResource("12_56pnv")
texture_hover = ExtResource("13_sp0y4")
texture_disabled = ExtResource("12_56pnv")
text = "BUY"

[node name="Label" parent="Panel/BuyButton" index="0"]
text = "BUY"
label_settings = SubResource("LabelSettings_1logi")

[node name="ArrowLeft" parent="Panel" instance=ExtResource("3_8ehwg")]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -41.0
offset_right = -2.0
offset_bottom = 42.0
grow_vertical = 2
texture_normal = ExtResource("5_erq7r")
texture_pressed = ExtResource("6_ott2t")
texture_disabled = ExtResource("7_ytlpl")

[node name="ArrowRight" parent="Panel" instance=ExtResource("3_8ehwg")]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 47.0
offset_top = -41.0
offset_right = 92.0
offset_bottom = 42.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(-1, 1)
texture_normal = ExtResource("5_erq7r")
texture_pressed = ExtResource("6_ott2t")
texture_disabled = ExtResource("7_ytlpl")

[node name="DescPanel" type="Control" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -151.0
offset_top = 131.0
offset_right = 151.0
offset_bottom = 251.0
grow_horizontal = 2

[node name="Background" parent="Panel/DescPanel" instance=ExtResource("2_qchdu")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -10.0
offset_right = 372.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.45, 0.45)

[node name="MarginContainer" type="MarginContainer" parent="Panel/DescPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 14
theme_override_constants/margin_top = 14
theme_override_constants/margin_right = 14
theme_override_constants/margin_bottom = 14

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/DescPanel/MarginContainer"]
layout_mode = 2

[node name="DescTitle" type="Label" parent="Panel/DescPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
text = "BOOST ITEM"
label_settings = SubResource("LabelSettings_jrbe7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Rating" type="Control" parent="Panel/DescPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="QualityLabel" type="Label" parent="Panel/DescPanel/MarginContainer/VBoxContainer/Rating"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -12.0
offset_right = 286.0
offset_bottom = 13.0
grow_vertical = 2
text = "Rating:"
label_settings = SubResource("LabelSettings_xtbda")

[node name="StarContainer" type="HBoxContainer" parent="Panel/DescPanel/MarginContainer/VBoxContainer/Rating"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 74.0
offset_top = -16.0
offset_right = 286.0
offset_bottom = 16.0
grow_vertical = 2

[node name="Star" type="TextureRect" parent="Panel/DescPanel/MarginContainer/VBoxContainer/Rating/StarContainer"]
layout_mode = 2
texture = ExtResource("9_wn4ob")
expand_mode = 2

[node name="Star2" type="TextureRect" parent="Panel/DescPanel/MarginContainer/VBoxContainer/Rating/StarContainer"]
layout_mode = 2
texture = ExtResource("9_wn4ob")
expand_mode = 2

[node name="Star3" type="TextureRect" parent="Panel/DescPanel/MarginContainer/VBoxContainer/Rating/StarContainer"]
layout_mode = 2
texture = ExtResource("9_wn4ob")
expand_mode = 2

[node name="Star4" type="TextureRect" parent="Panel/DescPanel/MarginContainer/VBoxContainer/Rating/StarContainer"]
layout_mode = 2
texture = ExtResource("9_wn4ob")
expand_mode = 2

[node name="Star5" type="TextureRect" parent="Panel/DescPanel/MarginContainer/VBoxContainer/Rating/StarContainer"]
layout_mode = 2
texture = ExtResource("9_wn4ob")
expand_mode = 2

[node name="DescLabel" type="Label" parent="Panel/DescPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "\"Placeholder description\""
label_settings = SubResource("LabelSettings_l57lv")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ExitButton" parent="." instance=ExtResource("3_8ehwg")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -87.0
offset_top = -82.0
offset_right = 87.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("11_gwwfa")
texture_pressed = ExtResource("12_56pnv")
texture_hover = ExtResource("13_sp0y4")
texture_disabled = ExtResource("12_56pnv")
text = "EXIT"

[node name="Label" parent="ExitButton" index="0"]
text = "EXIT"
label_settings = SubResource("LabelSettings_8fg33")

[connection signal="pressed" from="Panel/BuyButton" to="." method="buy_pressed"]
[connection signal="pressed" from="Panel/ArrowLeft" to="." method="left_pressed"]
[connection signal="pressed" from="Panel/ArrowRight" to="." method="right_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="exit_pressed"]

[editable path="Panel/BuyButton"]
[editable path="ExitButton"]
